# Folco

./: .gitignore  BeforeRelease.hpp  CMakeLists.txt  Docs.qrc  Format  Global.hpp  Logger.cpp  Logger.hpp  README.md  Settings.cpp  Settings.hpp  TODO  main.cpp
Configuration/: IFCfg.cpp  IFCfg.hpp  IFCfgList.cpp  IFCfgList.hpp  Interface.cpp  InterfaceList.cpp  InterfaceList.hpp  PredefinedIP.cpp
Docs/: Changelog  Docs.qrc  Format  README  TODO
Network/: Configuration.cpp  Configuration.hpp  ConfigurationList.cpp  ConfigurationList.hpp  Interface.cpp  Interface.hpp  InterfaceList.cpp  InterfaceList.hpp  PredefinedIP.cpp  PredefinedIP.hpp
Resources/: Folco.exe.manifest  Folco.rc  Icons.qrc  Icons.rc
Resources/HowTo/: HowTo.qrc
Ressources/: Icons.qrc
UI/: Dialog.cpp  Dialog.hpp  DlgAbout.cpp  DlgAbout.hpp  DlgAbout.ui  DlgConfig.cpp  DlgConfig.hpp  DlgConfig.ui  DlgConfiguration.cpp  DlgConfiguration.hpp  DlgConfiguration.ui  DlgEditConfig.cpp  DlgEditConfig.hpp  DlgEditConfig.ui  DlgEditInterface.cpp  DlgEditInterface.hpp  DlgEditInterface.ui  DlgEditPredefinedIP.cpp  DlgEditPredefinedIP.hpp  DlgEditPredefinedIP.ui  DlgHelp.cpp  DlgHelp.hpp  DlgHelp.ui  DlgInterface.cpp  DlgInterface.hpp  DlgInterface.ui  DlgLog.cpp  DlgLog.hpp  DlgLog.ui  DlgMergeConfigurations.cpp  DlgMergeConfigurations.hpp  DlgMergeConfigurations.ui  DlgMergeConnections.cpp  DlgMergeConnections.hpp  DlgMergeConnections.ui  DlgPredefinedIP.cpp  DlgPredefinedIP.hpp  DlgPredefinedIP.ui  DlgSettings.cpp  DlgSettings.hpp  (+15 more)
